# mentedb-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-please-config.json  release-plz.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml  release-please.yml  release-plz.yml  release.yml
examples/: claude_desktop_config.json  cursor_mcp.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
npm/mentedb-mcp/: package.json
npm/win32-x64/: package.json
scripts/: sync-npm-version.js
src/: cloud_client.rs  cloud_server.rs  config.rs  daemon.rs  main.rs  resources.rs  server.rs  tools.rs
src/hook/: backend.rs  mod.rs  redact.rs  spool.rs
src/tools/: cognitive.rs  consolidation.rs  context.rs  enrichment.rs  graph.rs  handler.rs  hook_support.rs  inference.rs  ingest.rs  memory.rs  mod.rs  process_turn.rs  process_turn_analysis.rs  process_turn_helpers.rs  types.rs
tests/: hook_e2e.rs  integration.rs
