[package]
name = "mentedb-mcp"
version = "0.2.5"
edition = "2024"
license = "Apache-2.0"
description = "MCP server for MenteDB, the cognition aware database for AI agent memory"
repository = "https://github.com/nambok/mentedb-mcp"
readme = "README.md"
keywords = ["mcp", "ai", "memory", "database", "agents"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "mentedb-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "transport-io"] }
mentedb = "0.2"
mentedb-core = "0.2"
mentedb-graph = "0.2"
mentedb-cognitive = "0.2"
mentedb-context = "0.2"
mentedb-embedding = { version = "0.2", features = ["local"] }
mentedb-extraction = "0.2"
mentedb-consolidation = "0.2"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
schemars = "1"
