[package]
name = "mentedb-mcp"
version = "0.5.32"
edition = "2024"
license = "Apache-2.0"
description = "MCP server for MenteDB, the cognition aware database for AI agent memory"
repository = "https://github.com/nambok/mentedb-mcp"
readme = "README.md"
keywords = ["mcp", "ai", "memory", "database", "agents"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "mentedb-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "~1.3", features = ["server", "transport-io"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
uuid = { version = "1", features = ["v4"] }
regex = "1"
schemars = "1"
axum = { version = "0.7", features = ["json"] }
open = "5"
reqwest = { version = "0.12", features = ["rustls-tls", "json"], default-features = false }

# Local mode dependencies (heavy - embedded DB, embeddings, LLM extraction)
mentedb = { version = "0.15", features = ["enrichment"], optional = true }
mentedb-core = { version = "0.15", optional = true }
mentedb-graph = { version = "0.15", optional = true }
mentedb-cognitive = { version = "0.15", optional = true }
mentedb-context = { version = "0.15", optional = true }
mentedb-embedding = { version = "0.15", features = ["local"], optional = true }
mentedb-extraction = { version = "0.15", optional = true }
mentedb-consolidation = { version = "0.15", optional = true }
openssl = { version = "0.10", features = ["vendored"], optional = true }

[features]
# Local mode ships by default: the README documents `npx mentedb-mcp --local`
# and `cargo install mentedb-mcp` + `--local`, so published binaries must
# include it. Cloud-only builds can use --no-default-features.
default = ["local"]
local = [
    "mentedb",
    "mentedb-core",
    "mentedb-graph",
    "mentedb-cognitive",
    "mentedb-context",
    "mentedb-embedding",
    "mentedb-extraction",
    "mentedb-consolidation",
]
vendored-openssl = ["openssl"]

[dev-dependencies]
tempfile = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
